# fineagent

./: .env.example  .gitignore  ADVANCED_EXAMPLES.md  CHANGELOG.md  CHECKLIST.md  EXAMPLES.md  FINAL_SUMMARY.md  GITHUB_INFO.md  INDEX.md  PROJECT_COMPLETION.txt  PROJECT_OVERVIEW.txt  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SHOWCASE.md  USAGE_GUIDE.md  pyproject.toml  test_examples.sh
src/: example_01_basic_chat.py  example_02_prompt_template.py  example_03_output_parser.py  example_04_memory.py  example_05_chains.py  example_06_retrieval.py  example_07_tools.py  example_08_agents.py  example_09_streaming.py  example_10_advanced.py  example_11_multi_agent.py  example_12_graph_workflow.py  example_13_rag_advanced.py  example_14_self_reflection.py  example_15_human_in_loop.py  main.py  run_all_examples.py
