[project]
name = "langchain-project"
version = "0.1.0"
description = "A project using langchain with uv"
requires-python = ">=3.10"
dependencies = [
    "dashscope>=1.25.2",
    "langchain==1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "python-dotenv>=1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
